fix(logo): Fix logo size on tablet

--- a/styles/components/header/_tablet.scss
+++ b/styles/components/header/_tablet.scss
@@ -7,7 +7,7 @@
         
         .logo {
             width: 121px;
-            height: 47px;
+            height: 41px;
             margin-bottom: 10px;
 
             h1 {
